Pipeline,ctown6,ctown7

--- a/ctown7.ipynb
+++ b/ctown7.ipynb
@@ -86,7 +86,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -131,9 +130,10 @@
     "    train_normal = X_normal.loc[:,sens].values\n",
     "    train_attack = X_attack.loc[:,sens].values\n",
     "    model = Pipeline()\n",
-    "    model.fit(train_normal,train_attack,lag,stride,optimal_k=1,tune=False,corr_normal=corr_normal[:,i].reshape(len(X_normal.columns),nolag_normal))\n",
+    "    model.fit(train_normal,train_attack,lag,stride,optimal_k=1,tune=False,corr_normal=corr_normal[:,i].reshape(len(X_normal.columns),nolag_normal),\n",
+    "              only_corr=True)\n",
     "    test = X_test.loc[:,sens].values\n",
-    "    y_predicted = model.predict(test,corr_test=corr_test[:,i].reshape(len(X_normal.columns),nolag_test))\n",
+    "    y_predicted = model.predict(test,corr_test=corr_test[:,i].reshape(len(X_normal.columns),nolag_test),only_corr=True)\n",
     "    sensor_predicted.append(y_predicted)\n",
     "    accuracy.append(accuracy_score(y_actual,y_predicted))\n",
     "    precision.append(precision_score(y_actual,y_predicted))\n",
@@ -150,10 +150,10 @@
     {
      "data": {
       "text/plain": [
-       "array([0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1,\n",
-       "       1, 0, 1, 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0,\n",
-       "       1, 1, 0, 0, 0, 1, 0, 1, 1, 1, 0, 0, 1, 0, 0, 0, 0, 1, 1, 1, 1, 1,\n",
-       "       1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
+       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
       ]
      },
      "execution_count": 39,
@@ -176,10 +176,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy  0.8\n",
-      "Precision  0.8222222222222222\n",
-      "Recall  0.8043478260869565\n",
-      "F1-score  0.8131868131868132\n"
+      "Accuracy  0.5411764705882353\n",
+      "Precision  0.5411764705882353\n",
+      "Recall  1.0\n",
+      "F1-score  0.7022900763358779\n"
      ]
     }
    ],
@@ -199,10 +199,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.4963064295485637 Median : 0.49411764705882355 Min : 0.4470588235294118 Max : 0.5764705882352941\n",
-      "precision - Mean: 0.6722591362126246 Median : 1.0 Min : 0.0 Max : 1.0\n",
-      "recall -    Mean: 0.07532861476238624 Median : 0.06521739130434782 Min : 0.0 Max : 0.2608695652173913\n",
-      "f1 -        Mean: 0.1307761450686093 Median : 0.12244897959183672 Min : 0.0 Max : 0.39344262295081966\n"
+      "Accuracy -  Mean: 0.48700410396716837 Median : 0.47058823529411764 Min : 0.35294117647058826 Max : 0.6235294117647059\n",
+      "precision - Mean: 0.3977544732964917 Median : 0.5079365079365079 Min : 0.0 Max : 0.6666666666666666\n",
+      "recall -    Mean: 0.47320525783619816 Median : 0.5652173913043478 Min : 0.0 Max : 1.0\n",
+      "f1 -        Mean: 0.42191035371409225 Median : 0.5365853658536586 Min : 0.0 Max : 0.7419354838709677\n"
      ]
     }
    ],
@@ -214,7 +214,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -237,9 +236,10 @@
     "    train_normal = X_normal.loc[:,sens].values\n",
     "    train_attack = X_attack.loc[:,sens].values\n",
     "    model = Pipeline()\n",
-    "    model.fit(train_normal,train_attack,lag,stride,tune=False,kscore_init='inertia',corr_normal=corr_normal[:,i].reshape(len(X_normal.columns),nolag_normal))\n",
+    "    model.fit(train_normal,train_attack,lag,stride,tune=False,kscore_init='inertia',corr_normal=corr_normal[:,i].reshape(len(X_normal.columns),nolag_normal),\n",
+    "              only_corr=True)\n",
     "    test = X_test.loc[:,sens].values\n",
-    "    y_predicted = model.predict(test,corr_test=corr_test[:,i].reshape(len(X_normal.columns),nolag_test))\n",
+    "    y_predicted = model.predict(test,corr_test=corr_test[:,i].reshape(len(X_normal.columns),nolag_test),only_corr=True)\n",
     "    sensor_predicted.append(y_predicted)\n",
     "    accuracy.append(accuracy_score(y_actual,y_predicted))\n",
     "    precision.append(precision_score(y_actual,y_predicted))\n",
@@ -256,9 +256,9 @@
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 1, 0, 1, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 0, 1, 0, 1, 1, 1, 1, 0, 0, 1, 0, 1, 1, 0, 1, 0, 1, 1, 1,\n",
-       "       1, 1, 1, 0, 1, 0, 1, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0, 1, 1,\n",
+       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
        "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
       ]
      },
@@ -282,10 +282,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy  0.6352941176470588\n",
-      "Precision  0.6190476190476191\n",
-      "Recall  0.8478260869565217\n",
-      "F1-score  0.7155963302752294\n"
+      "Accuracy  0.5411764705882353\n",
+      "Precision  0.5411764705882353\n",
+      "Recall  1.0\n",
+      "F1-score  0.7022900763358779\n"
      ]
     }
    ],
@@ -305,10 +305,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.4993160054719562 Median : 0.49411764705882355 Min : 0.4588235294117647 Max : 0.611764705882353\n",
-      "precision - Mean: 0.6121079566428403 Median : 0.75 Min : 0.0 Max : 1.0\n",
-      "recall -    Mean: 0.09605662285136501 Median : 0.08695652173913043 Min : 0.0 Max : 0.41304347826086957\n",
-      "f1 -        Mean: 0.15842811889055586 Median : 0.15384615384615383 Min : 0.0 Max : 0.5352112676056338\n"
+      "Accuracy -  Mean: 0.46320109439124474 Median : 0.4588235294117647 Min : 0.35294117647058826 Max : 0.6\n",
+      "precision - Mean: 0.2447984984619896 Median : 0.0 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.10111223458038424 Median : 0.0 Min : 0.0 Max : 0.9782608695652174\n",
+      "f1 -        Mean: 0.11302658769742344 Median : 0.0 Min : 0.0 Max : 0.6976744186046511\n"
      ]
     }
    ],
@@ -364,9 +364,9 @@
     "    train_attack = X_attack.loc[:,sens].values\n",
     "    model = Pipeline()\n",
     "    model.fit(train_normal,train_attack,lag,stride,tune=False,kscore_init='inertia',corr_normal=corr_normal[:,i].reshape(len(X_normal.columns),nolag_normal),\n",
-    "              corr_attack=corr_attack[:,i].reshape(len(X_attack.columns),nolag_attack))\n",
+    "              corr_attack=corr_attack[:,i].reshape(len(X_attack.columns),nolag_attack),only_corr=True)\n",
     "    test = X_test.loc[:,sens].values\n",
-    "    y_predicted = model.predict(test,corr_test=corr_test[:,i].reshape(len(X_normal.columns),nolag_test))\n",
+    "    y_predicted = model.predict(test,corr_test=corr_test[:,i].reshape(len(X_normal.columns),nolag_test),only_corr=True)\n",
     "    sensor_predicted.append(y_predicted)\n",
     "    accuracy.append(accuracy_score(y_actual,y_predicted))\n",
     "    precision.append(precision_score(y_actual,y_predicted))\n",
@@ -383,9 +383,9 @@
     {
      "data": {
       "text/plain": [
-       "array([0, 0, 0, 1, 1, 1, 0, 0, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 1, 1, 1, 1,\n",
-       "       1, 0, 0, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 0, 1, 0, 0, 0, 1, 0, 1, 1, 1, 1, 1, 0, 0, 1, 0, 1, 1, 1, 1, 0,\n",
+       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
        "       1, 1])"
       ]
      },
@@ -409,10 +409,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy  0.6176470588235294\n",
-      "Precision  0.5319148936170213\n",
-      "Recall  0.8620689655172413\n",
-      "F1-score  0.6578947368421053\n"
+      "Accuracy  0.4264705882352941\n",
+      "Precision  0.4264705882352941\n",
+      "Recall  1.0\n",
+      "F1-score  0.5979381443298969\n"
      ]
     }
    ],
@@ -424,7 +424,29 @@
    ]
   },
   {
-   "attachments": {},
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy -  Mean: 0.5605335157318742 Median : 0.5735294117647058 Min : 0.39705882352941174 Max : 0.6764705882352942\n",
+      "precision - Mean: 0.14853122423967235 Median : 0.0 Min : 0.0 Max : 0.8\n",
+      "recall -    Mean: 0.1098636728147554 Median : 0.0 Min : 0.0 Max : 0.9655172413793104\n",
+      "f1 -        Mean: 0.10119679893205441 Median : 0.0 Min : 0.0 Max : 0.5833333333333333\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Accuracy -  Mean: {} Median : {} Min : {} Max : {}\".format(np.asarray(accuracy).mean(), np.median(np.asarray(accuracy)),np.asarray(accuracy).min(), np.asarray(accuracy).max()))\n",
+    "print(\"precision - Mean: {} Median : {} Min : {} Max : {}\".format(np.asarray(precision).mean(), np.median(np.asarray(precision)),np.asarray(precision).min(), np.asarray(precision).max()))\n",
+    "print(\"recall -    Mean: {} Median : {} Min : {} Max : {}\".format(np.asarray(recall).mean(), np.median(np.asarray(recall)),np.asarray(recall).min(), np.asarray(recall).max()))\n",
+    "print(\"f1 -        Mean: {} Median : {} Min : {} Max : {}\".format(np.asarray(fscore).mean(), np.median(np.asarray(fscore)),np.asarray(fscore).min(), np.asarray(fscore).max()))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -433,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,9 +470,9 @@
     "    train_attack = X_attack.loc[:,sens].values\n",
     "    model = Pipeline()\n",
     "    model.fit(train_normal,train_attack,lag,stride,kscore_init='inertia',corr_normal=corr_normal[:,i].reshape(len(X_normal.columns),nolag_normal),\n",
-    "              corr_attack=corr_attack[:,i].reshape(len(X_attack.columns),nolag_attack))\n",
+    "              corr_attack=corr_attack[:,i].reshape(len(X_attack.columns),nolag_attack),only_corr=True)\n",
     "    test = X_test.loc[:,sens].values\n",
-    "    y_predicted = model.predict(test,corr_test=corr_test[:,i].reshape(len(X_normal.columns),nolag_test))\n",
+    "    y_predicted = model.predict(test,corr_test=corr_test[:,i].reshape(len(X_normal.columns),nolag_test),only_corr=True)\n",
     "    sensor_predicted.append(y_predicted)\n",
     "    accuracy.append(accuracy_score(y_actual,y_predicted))\n",
     "    precision.append(precision_score(y_actual,y_predicted))\n",
@@ -461,19 +483,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 1, 1, 0, 1, 0, 0, 1, 1, 1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 0, 1,\n",
+       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
        "       1, 1])"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,17 +508,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy  0.5441176470588235\n",
-      "Precision  0.48214285714285715\n",
-      "Recall  0.9310344827586207\n",
-      "F1-score  0.6352941176470589\n"
+      "Accuracy  0.4264705882352941\n",
+      "Precision  0.4264705882352941\n",
+      "Recall  1.0\n",
+      "F1-score  0.5979381443298969\n"
      ]
     }
    ],
@@ -509,17 +531,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.582079343365253 Median : 0.5735294117647058 Min : 0.5147058823529411 Max : 0.6470588235294118\n",
-      "precision - Mean: 0.36455121106283894 Median : 0.3333333333333333 Min : 0.0 Max : 1.0\n",
-      "recall -    Mean: 0.06655974338412189 Median : 0.034482758620689655 Min : 0.0 Max : 0.27586206896551724\n",
-      "f1 -        Mean: 0.10803532882486205 Median : 0.0625 Min : 0.0 Max : 0.380952380952381\n"
+      "Accuracy -  Mean: 0.5369357045143639 Median : 0.5588235294117647 Min : 0.4117647058823529 Max : 0.6029411764705882\n",
+      "precision - Mean: 0.28292156197799584 Median : 0.3333333333333333 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.17000801924619088 Median : 0.10344827586206896 Min : 0.0 Max : 0.9655172413793104\n",
+      "f1 -        Mean: 0.17364009680361134 Median : 0.16216216216216217 Min : 0.0 Max : 0.5833333333333333\n"
      ]
     }
    ],
@@ -549,12 +571,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.13"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
