--- a/ctown3.ipynb
+++ b/ctown3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
     "    train_normal = X_normal.loc[:,sens].values\n",
     "    train_attack = X_attack.loc[:,sens].values\n",
     "    model = Pipeline()\n",
-    "    model.fit(train_normal,train_attack,lag,stride,1,False)\n",
+    "    model.fit(train_normal,train_attack,lag,stride,optimal_k=1,tune=False)\n",
     "    test = X_test.loc[:,sens].values\n",
     "    y_predicted = model.predict(test)\n",
     "    sensor_predicted.append(y_predicted)\n",
@@ -124,19 +124,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 1, 1,\n",
-       "       1, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 1, 1,\n",
-       "       1, 0, 0, 0, 0, 1, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1,\n",
+       "array([1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 1, 0, 0, 1, 1,\n",
+       "       1, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1,\n",
+       "       1, 0, 0, 0, 0, 1, 0, 1, 1, 1, 0, 0, 0, 0, 1, 0, 0, 1, 1, 1, 1, 1,\n",
        "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,17 +149,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy  0.8117647058823529\n",
-      "Precision  0.8125\n",
+      "Accuracy  0.8\n",
+      "Precision  0.7959183673469388\n",
       "Recall  0.8478260869565217\n",
-      "F1-score  0.8297872340425533\n"
+      "F1-score  0.8210526315789473\n"
      ]
     }
    ],
@@ -172,17 +172,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.503967168262654 Median : 0.5058823529411764 Min : 0.4470588235294118 Max : 0.6235294117647059\n",
-      "precision - Mean: 0.689327242524917 Median : 1.0 Min : 0.0 Max : 1.0\n",
-      "recall -    Mean: 0.08998988877654197 Median : 0.08695652173913043 Min : 0.0 Max : 0.32608695652173914\n",
-      "f1 -        Mean: 0.15454224641655437 Median : 0.16 Min : 0.0 Max : 0.48387096774193544\n"
+      "Accuracy -  Mean: 0.5036935704514365 Median : 0.5058823529411764 Min : 0.4470588235294118 Max : 0.6235294117647059\n",
+      "precision - Mean: 0.6824150978220745 Median : 1.0 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.08948432760364003 Median : 0.08695652173913043 Min : 0.0 Max : 0.32608695652173914\n",
+      "f1 -        Mean: 0.15378318554613699 Median : 0.16 Min : 0.0 Max : 0.48387096774193544\n"
      ]
     }
    ],
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,19 +230,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1,\n",
+       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1,\n",
        "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
        "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,17 +255,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy  0.5764705882352941\n",
-      "Precision  0.5609756097560976\n",
+      "Accuracy  0.5529411764705883\n",
+      "Precision  0.5476190476190477\n",
       "Recall  1.0\n",
-      "F1-score  0.71875\n"
+      "F1-score  0.7076923076923077\n"
      ]
     }
    ],
@@ -278,17 +278,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.5181942544459645 Median : 0.5058823529411764 Min : 0.43529411764705883 Max : 0.6705882352941176\n",
-      "precision - Mean: 0.5539120160631789 Median : 0.6666666666666666 Min : 0.0 Max : 1.0\n",
-      "recall -    Mean: 0.17795753286147625 Median : 0.15217391304347827 Min : 0.0 Max : 0.5217391304347826\n",
-      "f1 -        Mean: 0.2551599514779739 Median : 0.2456140350877193 Min : 0.0 Max : 0.6216216216216216\n"
+      "Accuracy -  Mean: 0.5225718194254445 Median : 0.5176470588235295 Min : 0.4470588235294118 Max : 0.6823529411764706\n",
+      "precision - Mean: 0.5547224911910994 Median : 0.7083333333333334 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.18452982810920124 Median : 0.1956521739130435 Min : 0.0 Max : 0.43478260869565216\n",
+      "f1 -        Mean: 0.26524078207863655 Median : 0.3157894736842105 Min : 0.0 Max : 0.5846153846153846\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Accuracy -  Mean: {} Median : {} Min : {} Max : {}\".format(np.asarray(accuracy).mean(), np.median(np.asarray(accuracy)),np.asarray(accuracy).min(), np.asarray(accuracy).max()))\n",
+    "print(\"precision - Mean: {} Median : {} Min : {} Max : {}\".format(np.asarray(precision).mean(), np.median(np.asarray(precision)),np.asarray(precision).min(), np.asarray(precision).max()))\n",
+    "print(\"recall -    Mean: {} Median : {} Min : {} Max : {}\".format(np.asarray(recall).mean(), np.median(np.asarray(recall)),np.asarray(recall).min(), np.asarray(recall).max()))\n",
+    "print(\"f1 -        Mean: {} Median : {} Min : {} Max : {}\".format(np.asarray(fscore).mean(), np.median(np.asarray(fscore)),np.asarray(fscore).min(), np.asarray(fscore).max()))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Multiple clusters + No threshold tuning (No concat of training and test data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test = pd.DataFrame(index=df_test.index, columns=sensors, data=scaler.fit_transform(df_test[sensors]))\n",
+    "Y_test = df_test.loc[:,'ATT_FLAG']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = hankel.fit(np.array(Y_test),lag,stride)\n",
+    "y_actual = np.any(labels>0,axis=0).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sensor_models = []\n",
+    "sensor_predicted = []\n",
+    "accuracy = []\n",
+    "precision = []\n",
+    "recall = []\n",
+    "fscore = []\n",
+    "for sens in sensors:\n",
+    "    train_normal = X_normal.loc[:,sens].values\n",
+    "    train_attack = X_attack.loc[:,sens].values\n",
+    "    model = Pipeline()\n",
+    "    model.fit(train_normal,train_attack,lag,stride,tune=False,kscore_init='inertia')\n",
+    "    test = X_test.loc[:,sens].values\n",
+    "    y_predicted = model.predict(test)\n",
+    "    sensor_predicted.append(y_predicted)\n",
+    "    accuracy.append(accuracy_score(y_actual,y_predicted))\n",
+    "    precision.append(precision_score(y_actual,y_predicted))\n",
+    "    recall.append(recall_score(y_actual,y_predicted))\n",
+    "    fscore.append(f1_score(y_actual,y_predicted))\n",
+    "    sensor_models.append(model)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1,\n",
+       "       1, 1])"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sensor_predicted = np.asarray(sensor_predicted)\n",
+    "y_predicted = np.any(sensor_predicted,axis=0).astype(int)\n",
+    "y_predicted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy  0.47058823529411764\n",
+      "Precision  0.4461538461538462\n",
+      "Recall  1.0\n",
+      "F1-score  0.6170212765957447\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Accuracy \",accuracy_score(y_actual,y_predicted))\n",
+    "print(\"Precision \",precision_score(y_actual,y_predicted))\n",
+    "print(\"Recall \",recall_score(y_actual,y_predicted))\n",
+    "print(\"F1-score \",f1_score(y_actual,y_predicted))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy -  Mean: 0.5800273597811217 Median : 0.5735294117647058 Min : 0.4852941176470588 Max : 0.6617647058823529\n",
+      "precision - Mean: 0.3795197470588067 Median : 0.4166666666666667 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.13392141138732958 Median : 0.06896551724137931 Min : 0.0 Max : 0.4482758620689655\n",
+      "f1 -        Mean: 0.1860590233853703 Median : 0.125 Min : 0.0 Max : 0.5106382978723404\n"
      ]
     }
    ],
@@ -309,27 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_test = pd.DataFrame(index=df_test.index, columns=sensors, data=scaler.fit_transform(df_test[sensors]))\n",
-    "Y_test = df_test.loc[:,'ATT_FLAG']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "labels = hankel.fit(np.array(Y_test),lag,stride)\n",
-    "y_actual = np.any(labels>0,axis=0).astype(int)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,19 +462,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1,\n",
+       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
        "       1, 1])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,17 +487,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy  0.4852941176470588\n",
-      "Precision  0.453125\n",
+      "Accuracy  0.4264705882352941\n",
+      "Precision  0.4264705882352941\n",
       "Recall  1.0\n",
-      "F1-score  0.6236559139784946\n"
+      "F1-score  0.5979381443298969\n"
      ]
     }
    ],
@@ -404,17 +510,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.5725034199726401 Median : 0.5735294117647058 Min : 0.47058823529411764 Max : 0.6470588235294118\n",
-      "precision - Mean: 0.3648536807709534 Median : 0.42857142857142855 Min : 0.0 Max : 1.0\n",
-      "recall -    Mean: 0.11868484362469925 Median : 0.06896551724137931 Min : 0.0 Max : 0.3103448275862069\n",
-      "f1 -        Mean: 0.1690612621888936 Median : 0.1212121212121212 Min : 0.0 Max : 0.4285714285714286\n"
+      "Accuracy -  Mean: 0.5759233926128591 Median : 0.5735294117647058 Min : 0.4852941176470588 Max : 0.6617647058823529\n",
+      "precision - Mean: 0.38414435162041183 Median : 0.4 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.13311948676824378 Median : 0.13793103448275862 Min : 0.0 Max : 0.3793103448275862\n",
+      "f1 -        Mean: 0.19087515845994482 Median : 0.1904761904761905 Min : 0.0 Max : 0.4782608695652174\n"
      ]
     }
    ],
@@ -469,7 +575,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
